Install websocket to client and server, test connection
Signed-off-by: Ivan Hudzynskyi <ivanhudzinskyi2000@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -10,5 +10,7 @@
   <main>
     <h1>This is a test!</h1>
   </main>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/websocket.js"></script>
 </body>
 </html>
