--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,41 @@
 </head>
 <body>
   <main>
-    <h1>This is a test!</h1>
+    <div id="chat">
+      <div id="name-row">
+        <div class="name-cell">
+          <p>My name is</p>
+        </div>
+        <div class="name-cell">
+          <input type="text" id="name" placeholder="name here">
+        </div>
+      </div>
+      <div id="messages-row">
+        <div id="messages-cell">
+          <div id="messages">
+            <div class="message">
+              <p><b>Name</b></p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed ab, veritatis quidem aut fugit. Natus nostrum itaque magni excepturi, facilis, dolores pariatur ex, quisquam quaerat ad non. Quam, corporis!</p>
+            </div>
+            <div class="message">
+              <p><b>Name</b></p>
+              <p>Smaller message</p>
+            </div>
+            <div class="my-message">
+              <p><b>Name</b></p>
+              <p>An answer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <br> -->
+      <div id="input-row">
+        <textarea id="message-text" rows="4" placeholder="Write a message"></textarea>
+        <button id="send-btn">Send</button>
+      </div>
+    </div>
   </main>
+  <script src="jquery-3.4.1.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/websocket.js"></script>
 </body>
