Implement sending messages to server
Signed-off-by: Ivan Hudzynskyi <ivanhudzinskyi2000@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
           <p>My name is</p>
         </div>
         <div class="name-cell">
-          <input type="text" id="name" placeholder="name here">
+          <input type="text" id="username" placeholder="name here">
         </div>
       </div>
       <div id="messages-row">
@@ -35,14 +35,12 @@
           </div>
         </div>
       </div>
-      <!-- <br> -->
       <div id="input-row">
         <textarea id="message-text" rows="4" placeholder="Write a message"></textarea>
         <button id="send-btn">Send</button>
       </div>
     </div>
   </main>
-  <script src="jquery-3.4.1.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/websocket.js"></script>
 </body>
